syntax = "proto3";

package services;

import "userModels.proto";
option go_package="./;services";

service UserService {
    rpc UserLogin(UserRequest) returns (UserResponse);
    rpc UserRegister (UserRequest) returns (UserResponse);
}

message UserRequest {
    string UserName=1;
    string UserPassword=2;
    string PasswordConfirm=3;
}

message UserResponse {
    UserModel UserDetail =1;
    uint32 Code=2;
}

